--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -181,6 +181,81 @@
         </div>
     </div>
     
+    <div class="case-study-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="case-study-title">
+                        <h2>Some of Our Case Study</h2>
+                        <p>Ollaboratively enable standards compliant value vis-a-vis e-business meta-services. 
+                            enhance end-to-end niches before integrated web services. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="owl-1">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="owl-carousel slide-area-case">
+                            <div class="single-case-item case-bg-1">
+                                <div class="case-hover">
+                                    <div class="case-info">
+                                        <h3>icelolly.com</h3>
+                                        <p>Analytics 360 improving business decisions</p>
+                                        <p class="case-p-2">Seamlessly extend worldwide internal or organic
+                                            sources vis- team driven outside box thinking. 
+                                            Proactively drive technically sound.
+                                        </p>
+                                        <a href=""><i class="fa-solid fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-case-item case-bg-2">
+                                <div class="case-hover">
+                                    <div class="case-info">
+                                        <h3>icelolly.com</h3>
+                                        <p>Analytics 360 improving business decisions</p>
+                                        <p class="case-p-2">Seamlessly extend worldwide internal or organic
+                                            sources vis- team driven outside box thinking. 
+                                            Proactively drive technically sound.
+                                        </p>
+                                        <a href=""><i class="fa-solid fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="single-case-item case-bg-3">
+                                <div class="case-hover">
+                                    <div class="case-info">
+                                        <h3>icelolly.com</h3>
+                                        <p>Analytics 360 improving business decisions</p>
+                                        <p class="case-p-2">Seamlessly extend worldwide internal or organic
+                                            sources vis- team driven outside box thinking. 
+                                            Proactively drive technically sound.
+                                        </p>
+                                        <a href=""><i class="fa-solid fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="single-case-item case-bg-4">
+                                <div class="case-hover">
+                                    <div class="case-info">
+                                        <h3>icelolly.com</h3>
+                                        <p>Analytics 360 improving business decisions</p>
+                                        <p class="case-p-2">Seamlessly extend worldwide internal or organic
+                                            sources vis- team driven outside box thinking. 
+                                            Proactively drive technically sound.
+                                        </p>
+                                        <a href=""><i class="fa-solid fa-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
