--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -257,6 +257,46 @@
         </div>
     </div>
 
+    <div id="owl-2">
+        <div class="testimonial-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 text-center">
+                        <div class="owl-carousel testimonial-slide owl-theme">
+                            <div class="single-testimonial-item">
+                                <h2>“ Ridiculously easy to use. We have been looking for an 
+                                    intuitive tool like this for a while and this is just 
+                                    what we needed. ”
+                                </h2>
+                                <img class="w-25" src="Images/project-testimonial-bg.jpg" alt="">
+                                <h3>Mark McClendon</h3>
+                                <p>Partner & Executive Director, VML</p>
+                            </div>
+                            <div class="single-testimonial-item">
+                                <h2>“ Ridiculously easy to use. We have been looking for an 
+                                    intuitive tool like this for a while and this is just 
+                                    what we needed. ”
+                                </h2>
+                                <img class="w-25" src="Images/project-testimonial-bg.jpg" alt="">
+                                <h3>Mark McClendon</h3>
+                                <p>Partner & Executive Director, VML</p>
+                            </div>
+                            <div class="single-testimonial-item">
+                                <h2>“ Ridiculously easy to use. We have been looking for an 
+                                    intuitive tool like this for a while and this is just 
+                                    what we needed. ”
+                                </h2>
+                                <img class="w-25" src="Images/project-testimonial-bg.jpg" alt="">
+                                <h3>Mark McClendon</h3>
+                                <p>Partner & Executive Director, VML</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
