--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -298,19 +298,87 @@
    </div>
 
    <div class="cta-area-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-7 text-left">
-                <div class="cta-title">
-                    <h3>Ready to improve your digital marketing efforts?</h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 text-left">
+                    <div class="cta-title">
+                        <h3>Ready to improve your digital marketing efforts?</h3>
+                    </div>
+                </div>
+                <div class="col-md-5 text-right">
+                    <a href="" class="cta-bordered-btn">Get free Seo Analysis</a>
                 </div>
             </div>
-            <div class="col-md-5 text-right">
-                <a href="" class="cta-bordered-btn">Get free Seo Analysis</a>
+        </div>
+    </div>   
+    
+    <div class="pricing-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="pricing-section-title">
+                        <h2>Some of Our Best Pricing</h2>
+                        <p>Seamlessly leverage existing extensible customer service for worldwide total 
+                            fashion future-proof alignments through leadership.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="single-pricing-list">
+                        <div class="pricing-info">
+                            <h5>Basic</h5>
+                            <span>$29.99</span>
+                            <p>per month</p>
+                        </div>
+                        <ul>
+                            <li>Limited marketing & growth hacks</li>
+                            <li>5 Analytics Campaigns</li>
+                            <li>300 Keywords</li>
+                            <li>250,000 Crawled Pages</li>
+                            <li>Unlimited updates</li>
+                        </ul>
+                        <a href="" class="pricing-btn">Purchase Plan</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-pricing-list">
+                        <div class="pricing-info">
+                            <h5>Pro</h5>
+                            <span>$69.99</span>
+                            <p>per month</p>
+                        </div>
+                        <ul>
+                            <li>Limited marketing & growth hacks</li>
+                            <li>15 Analytics Campaigns</li>
+                            <li>800 Keywords</li>
+                            <li>550,000 Crawled Pages</li>
+                            <li>Unlimited updates</li>
+                        </ul>
+                        <a href="" class="pricing-btn">Purchase Plan</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-pricing-list">
+                        <div class="pricing-info">
+                            <h5>Advanced</h5>
+                            <span>$199.99</span>
+                            <p>per month</p>
+                        </div>
+                        <ul>
+                            <li>Limited marketing & growth hacks</li>
+                            <li>55 Analytics Campaigns</li>
+                            <li>1500 Keywords</li>
+                            <li>950,000 Crawled Pages</li>
+                            <li>Unlimited updates</li>
+                        </ul>
+                        <a href="" class="pricing-btn">Purchase Plan</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
