--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -380,6 +380,30 @@
         </div>
     </div>
 
+    <div class="brands-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="single-brand-item">
+                        <img src="Images/project-brand-bg-1.png" alt="">
+                    </div>
+                    <div class="single-brand-item">
+                        <img src="Images/project-brand-bg-2.png" alt="">
+                    </div>
+                    <div class="single-brand-item">
+                        <img src="Images/project-brand-bg-3.png" alt="">
+                    </div>
+                    <div class="single-brand-item">
+                        <img src="Images/project-brand-bg-4.png" alt="">
+                    </div>
+                    <div class="single-brand-item">
+                        <img src="Images/project-brand-bg-5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
