--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -48,7 +48,7 @@
                             <h2>Business has onlytwo functions marketingand innovation.</h2>
                             <p>Traffic is a great platform to stand out your website. So try now.</p>
                         </div>
-                        <form action="submit">
+                        <form action="submit" class="form-1">
                             <input type="email" placeholder="Your website link">
                             <a href="" type="submit" class="bordered-btn-middle">Get Free Analysis</a>
                         </form>
@@ -407,7 +407,7 @@
     <div class="footer-area">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 text-left">
+                <div class="col-md-3 text-left">
                     <h5 class="footer-title">Product</h5>
                     <div class="mainmenu-2">
                         <ul>
@@ -419,7 +419,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <h5 class="footer-title">Company</h5>
                     <div class="mainmenu-2">
                         <ul>
@@ -431,7 +431,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <h5 class="footer-title">Help Center</h5>
                     <div class="mainmenu-2">
                         <ul>
@@ -442,7 +442,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="footer-hero">
                         <h5 class="footer-title">Sign Up to Our Weekly Newslater</h5>
                         <form action="submit" class="form-2">
@@ -475,7 +475,7 @@
             </div>
         </div>
     </div>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
