--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -17,29 +17,44 @@
         <div class="header-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-2 text-left">
-                        <a href="" class="site-logo"><img src="Images/Logo.png" alt=""></a>
-                    </div>
-                    <div class="col-md-7 text-left">
-                        <div class="mainmenu">
-                            <ul>
-                                <li><a href="">Home</a></li>
-                                <li><a href="">Features</a></li>
-                                <li><a href="">Pages</a></li>
-                                <li><a href="">Services</a></li>
-                                <li><a href="">Case Studies</a></li>
-                                <li><a href="">Blog</a></li>
-                                <li><a href="">Contact</a></li>
-                            </ul>
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="#"><a href="" class="site-logo"><img src="Images/Logo.png" alt=""></a></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                      
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                          <ul class="navbar-nav m-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#">Pages</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#">Services</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#">Case Studies</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#">Blog</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#">Contact</a>
+                              </li>
+                          </ul>
+                          <form class="form-inline my-2 my-lg-0">
+                            <a href="" class="bordered-btn">Free SEO Analysis</a>
+                          </form>
                         </div>
-                    </div>
-                    <div class="col-md-3 text-right">
-                        <a href="" class="bordered-btn">Free SEO Analysis</a>
-                    </div>
+                      </nav>
                 </div>
             </div>
         </div>
-        
         <div class="middle-area">
             <div class="container">
                 <div class="row">
