--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -48,7 +48,7 @@
                               </li>
                           </ul>
                           <form class="form-inline my-2 my-lg-0">
-                            <a href="" class="bordered-btn">Free SEO Analysis</a>
+                            <a href="" class="header-bordered-btn">Free SEO Analysis</a>
                           </form>
                         </div>
                       </nav>
@@ -87,6 +87,83 @@
             </div>
         </div>
     </div>
+
+    <div class="about-us-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="about-img">
+                        <img src="Images/project-3-about-bg-5.png" alt="">
+                        <img src="Images/project-3-about-bg-4.png" alt=""><br>
+                        <img src="Images/project-3-about-bg-1.png" alt="">
+                        <img src="Images/project-3-about-bg-2.png" alt="">
+                        <img src="Images/project-3-about-bg-3.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="about-us-title">
+                        <h3>The Fastest Growing Digital Marketing Agency</h3>
+                        <p>I take great pride in owning a company that has received the level of success 
+                            accolades that have been bestowed upon WebiMax.grow tactical strategic them 
+                            areas with customer directed ideas. Distinctively productivate transparent core
+                            etencies rather than prospective e-services.
+                        </p>
+                        <a href="" type="submit" class="about-us-btn">Know More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="service-title">
+                        <h2>Grab Our Awesome Services</h2>
+                        <p>Whiteboard ubiquitous niche markets and accurate collaboration.
+                            Holisticly supply client-focused models B2B processes. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="single-service-list">
+                        <div class="service-inner">
+                            <img src="Images/project-3-service-bg-1.png" alt="" class="service-icon">
+                            <h5>Content marketing</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="single-service-list">
+                        <div class="service-inner">
+                            <img src="Images/project-3-service-bg-2.png" alt="" class="service-icon">
+                            <h5>Web Analytics</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="single-service-list">
+                        <div class="service-inner">
+                            <img src="Images/project-3-service-bg-3.png" alt="" class="service-icon">
+                            <h5>Virtual Marketing</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="single-service-list">
+                        <div class="service-inner">
+                            <img src="Images/project-3-service-bg-4.png" alt="" class="service-icon">
+                            <h5>Inbound Marketing</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
