--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -182,6 +182,56 @@
         </div>
     </div>
 
+    <div class="case-study-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="case-study-title">
+                        <h2>Our Awesome Case Study</h2>
+                        <p>Whiteboard ubiquitous niche markets and accurate collaboration.
+                            Holisticly supply client-focused models B2B processes. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="single-case-item case-bg-1">
+                        <div class="case-service-inner">
+                            <a href="" class="case-study-btn">See Case study <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="case-info">
+                        <h5>Project Alibaba UX</h5>
+                        <p>UI & UX Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-case-item case-bg-2">
+                        <div class="case-service-inner">
+                            <a href="" class="case-study-btn">See Case study <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="case-info">
+                        <h5>Project Alibaba UX</h5>
+                        <p>UI & UX Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-case-item case-bg-3">
+                        <div class="case-service-inner">
+                            <a href="" class="case-study-btn">See Case study <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="case-info">
+                        <h5>Project Alibaba UX</h5>
+                        <p>UI & UX Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
