--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -232,6 +232,79 @@
         </div>
     </div>
 
+    <div class="pricing-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="pricing-title">
+                        <h2>Check Our Awesome Pricing</h2>
+                        <p>Whiteboard ubiquitous niche markets and accurate collaboration.
+                            Holisticly supply client-focused models B2B processes. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="single-pricing-list">
+                        <div class="price-tag">
+                            <h5>Basic</h5>
+                            <span class="price">$29.99</span>
+                            <p class="price-2">per month</p>
+                        </div>
+                        <div class="price-demo">
+                            <ul>
+                                <li>Limited marketing & growth hacks</li>
+                                <li>5 Analytics Campaigns</li>
+                                <li>300 Keywords</li>
+                                <li>250,000 Crawled Pages</li>
+                                <li>Unlimited updates</li>
+                            </ul>
+                        </div>
+                        <a href="" type="submit" class="price-btn">Purchase Plan</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-pricing-list">
+                        <div class="price-tag">
+                            <h5>Pro</h5>
+                            <span class="price">$69.99</span>
+                            <p class="price-2">per month</p>
+                        </div>
+                        <div class="price-demo">
+                            <ul>
+                                <li>Limited marketing & growth hacks</li>
+                                <li>15 Analytics Campaigns</li>
+                                <li>800 Keywords</li>
+                                <li>550,000 Crawled Pages</li>
+                                <li>Unlimited updates</li>
+                            </ul>
+                        </div>
+                        <a href="" type="submit" class="price-btn">Purchase Plan</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-pricing-list">
+                        <div class="price-tag">
+                            <h5>Advanced</h5>
+                            <span class="price">$199.99</span>
+                            <p class="price-2">per month</p>
+                        </div>
+                        <div class="price-demo">
+                            <ul>
+                                <li>Limited marketing & growth hacks</li>
+                                <li>50 Analytics Campaigns</li>
+                                <li>1500 Keywords</li>
+                                <li>950,000 Crawled Pages</li>
+                                <li>Unlimited updates</li>
+                            </ul>
+                        </div>
+                        <a href="" type="submit" class="price-btn">Purchase Plan</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
