--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -305,6 +305,63 @@
         </div>
     </div>
 
+    <div class="blog-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="blog-title">
+                        <h2>Check Our Awesome Blog</h2>
+                        <p>Whiteboard ubiquitous niche markets and accurate collaboration.
+                            Holisticly supply client-focused models B2B processes. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="single-blog-list">
+                        <div class="blog-info">
+                            <h5>Credibly maintain client-centric
+                            distributed partnerships.</h5>
+                           <p>Data before unique human capital. Energistically 
+                            stand-alone quality vectors after open-source inter
+                            Energistically actualize global method..
+                            
+                            </p>
+                            <a href="" class="blog-borderless-btn">Read More <i class="fa-sharp fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-blog-list">
+                        <div class="blog-info">
+                            <h5>Intrinsicly enhance team driven total 
+                                linkage premier.</h5>
+                           <p>Energistically architect interactive value whereas 
+                            functional niches. Appropriately productize premier 
+                            materials for visionary data..
+                            </p>
+                            <a href="" class="blog-borderless-btn">Read More <i class="fa-sharp fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-blog-list">
+                        <div class="blog-info">
+                            <h5>Intrinsicly innovate pandemic mater
+                                after error-free.</h5>
+                           <p>Monotonectally leverage other's plug-and-play mar
+                            with multifunctional infrastructures.envisioneer who
+                            inte
+                            ractive.</p>
+                            <a href="" class="blog-borderless-btn">Read More <i class="fa-sharp fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
