--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1</title>
+    <title>Project 3</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -369,6 +369,74 @@
                     <div class="cta-title">
                         <h2>Ready to improve your digital marketing efforts?</h2>
                         <a href="" class="cta-btn">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 text-left">
+                    <a href="" class="sites-logo"><img src="Images/Logo.png" alt=""></a>
+                    <div class="logo-title">
+                        <p>Traffic is a great marking template with so many 
+                            great features. Traffic have 5 homepage and 
+                            so many block with great UI.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-title">
+                        <h5>Company</h5>
+                    </div>
+                    <div class="footer-mainmenu">
+                        <ul>
+                            <li><a href="">About us</a></li>
+                            <li><a href="">Try Demo</a></li>
+                            <li><a href="">Terms of service</a></li>
+                            <li><a href="">Page Builder</a></li>
+                            <li><a href="">Privacy policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-title">
+                        <h5>Help Center</h5>
+                    </div>
+                    <div class="footer-mainmenu">
+                        <ul>
+                            <li><a href="">Help centre</a></li>
+                            <li><a href="">Email Us</a></li>
+                            <li><a href="">Message Us</a></li>
+                            <li><a href="">Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-title">
+                        <h5>Follow Us</h5>
+                    </div>
+                    <div class="footer-mainmenu">
+                        <ul>
+                            <li><a href=""><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+                            <li><a href=""><i class="fa-brands fa-twitter"></i> Twitter</a></li>
+                            <li><a href=""><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                            <li><a href=""><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                            <li><a href=""><i class="fa-brands fa-pinterest"></i>pinterest</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copy-right-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="copy-text">
+                        <p> © Traffic 2017. All rights reserved . Powered By crazycafe.</p>
                     </div>
                 </div>
             </div>
