--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -25,7 +25,7 @@
                       
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav m-auto">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                               </li>
                               <li class="nav-item">
@@ -96,8 +96,8 @@
                         <img src="Images/project-3-about-bg-5.png" alt="">
                         <img src="Images/project-3-about-bg-4.png" alt=""><br>
                         <img src="Images/project-3-about-bg-1.png" alt="">
-                        <img src="Images/project-3-about-bg-2.png" alt="">
-                        <img src="Images/project-3-about-bg-3.png" alt="">
+                        <img src="Images/project-3-about-bg-2-1.png" alt="">
+                        <img src="Images/project-3-about-bg-6.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -388,44 +388,50 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="footer-title">
-                        <h5>Company</h5>
-                    </div>
-                    <div class="footer-mainmenu">
-                        <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Try Demo</a></li>
-                            <li><a href="">Terms of service</a></li>
-                            <li><a href="">Page Builder</a></li>
-                            <li><a href="">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="footer-title">
-                        <h5>Help Center</h5>
-                    </div>
-                    <div class="footer-mainmenu">
-                        <ul>
-                            <li><a href="">Help centre</a></li>
-                            <li><a href="">Email Us</a></li>
-                            <li><a href="">Message Us</a></li>
-                            <li><a href="">Blog</a></li>
-                        </ul>
+                    <div class="margin-left">
+                        <div class="footer-title">
+                            <h5>Company</h5>
+                        </div>
+                        <div class="footer-mainmenu">
+                            <ul>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Try Demo</a></li>
+                                <li><a href="">Terms of service</a></li>
+                                <li><a href="">Page Builder</a></li>
+                                <li><a href="">Privacy policy</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="footer-title">
-                        <h5>Follow Us</h5>
+                    <div class="margin-left">
+                        <div class="footer-title">
+                            <h5>Help Center</h5>
+                        </div>
+                        <div class="footer-mainmenu">
+                            <ul>
+                                <li><a href="">Help centre</a></li>
+                                <li><a href="">Email Us</a></li>
+                                <li><a href="">Message Us</a></li>
+                                <li><a href="">Blog</a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="footer-mainmenu">
-                        <ul>
-                            <li><a href=""><i class="fa-brands fa-facebook"></i> Facebook</a></li>
-                            <li><a href=""><i class="fa-brands fa-twitter"></i> Twitter</a></li>
-                            <li><a href=""><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
-                            <li><a href=""><i class="fa-brands fa-instagram"></i> Instagram</a></li>
-                            <li><a href=""><i class="fa-brands fa-pinterest"></i>pinterest</a></li>
-                        </ul>
+                </div>
+                <div class="col-md-3">
+                    <div class="margin-left">
+                        <div class="footer-title">
+                            <h5>Follow Us</h5>
+                        </div>
+                        <div class="footer-mainmenu">
+                            <ul>
+                                <li><a href=""><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+                                <li><a href=""><i class="fa-brands fa-twitter"></i> Twitter</a></li>
+                                <li><a href=""><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                                <li><a href=""><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                                <li><a href=""><i class="fa-brands fa-pinterest"></i>pinterest</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
