--- a/Project-5/index.html
+++ b/Project-5/index.html
@@ -76,6 +76,36 @@
         </div>
     </div>
 
+    <div class="about-us-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="bg-gellery">
+                        <img  src="Images/project-5-about-bg-1.png" alt="">
+                        <img  src="Images/project-5-about-bg-2.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="about-title">
+                        <h2>How can traffic <br>
+                            help my buisness grow?
+                        </h2>
+                        <p>The Greenpeace activist, said the sandstorm was reminiscent of those witnessed about two 
+                            ago before a large-scale reforestation campaign in northern China helped reduce the number 
+                            sandstorms reaching the capital.We have had a lucky few years recently. Sandstorms have tradi
+                            been a problem for Beijing and for the northern .
+                        </p>
+                        <p>The Greenpeace activist, said the sandstorm was reminiscent of those witnessed about two 
+                            ago before a large-scale reforestation campaign in northern China helped reduce the number 
+                            sandstorms reaching the capital.We have had a lucky.
+                        </p>
+                    </div>
+                    <a href="" class="about-btn">Know More <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
